# fast_api_todos

./: .env.example  .gitignore  README.md  alembic.ini  fastapi-test.db  pyproject.toml
alembic/: env.py
alembic/versions/: 6bdf23381c93_create_address_table.py  bf030efbacf0_create_address_id_to_users.py  e9f97b26017b_create_phone_number_for_user_col.py
app/: auth.py  database.py  dependencies.py  models.py  server.py
app/auth/: auth.py
app/db/: database.py  models.py  schema.py
app/db/access_layers/: db_addresses.py  db_todos.py  db_users.py
app/routers/: addresses.py  admin.py  auth.py  todos.py  users.py
app/routers/utils/: type_classes.py  utility_funcs.py
todoapp/: database.py  main.py  models.py  todosapp.db
todoapp/routers/: addresses.py  admin.py  auth.py  todos.py  users.py
todoapp/routers/utils/: type_classes.py  utility_funcs.py
